fixed the issue with the gateway configuration

--- a/orders-service/src/main/resources/application.properties
+++ b/orders-service/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
-# Feign Client Config (Direct URL for Anarchy Mode)
-application.config.products-url=http://localhost:8082
+# Feign Client Config (Gateway URL for Governed Mode)
+application.config.products-url=http://api-gateway:8080
